--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script type="text/javascript" src="js/TextGeometry.js"></script
 	<script type="text/javascript" src="js/helvetiker_regular.typeface.js"></script>
 	<script type="text/javascript" src="js/Stats.js"></script>
+	<script id="vs0" type="x-shader/x-vertex"></script>
+	<script id="fs0" type="x-shader/x-fragment"></script>
 <style>
   body{
   	margin:0;
